cmake_minimum_required(VERSION 3.10)

project(Raven VERSION 1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
include_directories(${PROJECT_SOURCE_DIR}/dependencies)
add_executable(raven main.cpp)
find_package(CURL REQUIRED)
target_include_directories(raven PRIVATE ${CURL_INCLUDE_DIRS})
target_link_libraries(raven PRIVATE ${CURL_LIBRARIES})
find_package(Z3 REQUIRED)
target_include_directories(raven PRIVATE ${Z3_INCLUDE_DIRS})
target_link_libraries(raven PRIVATE ${Z3_LIBRARIES})
find_package(nlohmann_json REQUIRED)
target_link_libraries(raven PRIVATE nlohmann_json::nlohmann_json)
set(JSON_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/dependencies)
set(Z3_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/dependencies/z3)
set(CURL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/dependencies/curl)
target_link_libraries(raven PRIVATE ${Z3_LIBRARIES})
target_link_libraries(raven PRIVATE ${CURL_LIBRARIES})
